test/sema/module_import_error.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:13: error: module 'ops' not found
const ops = import("ops");

fn main() -> void {
    let x = 1;
    let y = 2;

    ops.print(x);

    let result = ops.integer.add(x, y);
    
    ops.print(result);
}